# aurora-os

./: Cargo.toml  build.rs  makefile  x86_64-aurora_os.json
.cargo/: config.toml
hello/: build.rs
hello/.cargo/: config.toml
hello/src/: main.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  framebuffer.rs  gdt.rs  ide.rs  ide_rw.rs  interrupts.rs  main.rs  memory.rs  process.rs  serial.rs  syscall.rs  tty.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/: main.rs
